<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#DFDBDB"
    tools:context=".Player_Name">


    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        />
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/grid_tic_tac_toe"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="100dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/single_player"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="11dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_player"
            android:textSize="25sp"
            android:layout_gravity="center"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/multi_player"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="11dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_player"
            android:textSize="25sp"
            android:layout_gravity="center"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/play_online"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="11dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_with_friends"
            android:textSize="25sp"
            android:layout_gravity="center"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poweredBy"
        android:textColor="#A6000000"
        android:layout_marginTop="80dp"
        />


</LinearLayout>