<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg"
    tools:context=".SinglePlayerActivity">

    <!-- Player 1 Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/firstPlayer"
            android:src="@drawable/x"
             />

        <TextView
            android:id="@+id/txtPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <!-- Player 2 Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/secondPlayer"
            android:src="@drawable/o"/>

        <TextView
            android:id="@+id/txtPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <!-- Game Board -->

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/grid" />

        <GridLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:columnCount="3">

            <!-- Buttons go here -->
            <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/btn1"
                android:onClick="Check"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"

                />
            <Button
                android:id="@+id/btn2"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:onClick="Check"
                android:layout_marginTop="30dp"
                android:layout_marginStart="6dp"
                />
            <Button
                android:textColor="@color/black"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/btn3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:onClick="Check"
                android:layout_marginStart="2dp"
                android:layout_marginTop="30dp"
                 />
            <Button
                android:id="@+id/btn4"
                android:gravity="center"
                android:textColor="@color/black"
                android:backgroundTint="@color/transparent"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="Check"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                />
            <Button
                android:id="@+id/btn5"
                android:textColor="@color/black"
                android:backgroundTint="@color/transparent"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="Check"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp" />
            <Button
                android:id="@+id/btn6"
                android:textColor="@color/black"
                android:backgroundTint="@color/transparent"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold"
                android:onClick="Check"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
               />
            <Button
                android:id="@+id/btn7"
                android:backgroundTint="@color/transparent"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:onClick="Check" />
            <Button
                android:id="@+id/btn8"
                android:textColor="@color/black"
                android:backgroundTint="@color/transparent"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="6dp"
                android:onClick="Check" />
            <Button
                android:id="@+id/btn9"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:gravity="center"
                android:backgroundTint="@color/transparent"
                android:textStyle="bold"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:onClick="Check" />

        </GridLayout>
    </FrameLayout>


    <!-- Winner/Draw Result -->
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/black" />

    <!-- Restart Button -->
    <Button
        android:id="@+id/btnRestart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/btnResult" />

</LinearLayout>
